--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@testing-library/user-event": "^14.5.2",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.6",
     "eslint-plugin-prettier": "^5.1.3",
     "firebase": "^10.11.1",
     "jwt-decode": "^4.0.0",
@@ -36,6 +37,7 @@
     "react-awesome-reveal": "^4.2.10",
     "react-big-calendar": "^1.13.1",
     "react-bootstrap": "^2.10.2",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.0",
     "react-redux": "^9.1.0",
